[package]
edition = "2021"
name = "egglog"
version = "0.5.0"
description = "egglog is a language that combines the benefits of equality saturation and datalog. It can be used for analysis, optimization, and synthesis of programs. It is the successor to the popular rust library egg."
repository = "https://github.com/egraphs-good/egglog"
keywords = ["e-graphs", "egglog", "datalog", "compiler", "equality"]
license = "MIT"
readme = "README.md"

[[bench]]
name = "example_benchmarks"
harness = false

[[bench]]
name = "nightly_benchmarking"
harness = false

[[test]]
name = "files"
harness = false
required-features = ["bin"]

[[bin]]
name = "egglog"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = ["bin"]

bin = [
  "serde",
  "graphviz",
  "dep:clap",
  "dep:env_logger",
  "dep:chrono",
]
serde = ["egraph-serialize/serde"]
graphviz = ["egraph-serialize/graphviz"]
nondeterministic = []

[dependencies]
add_primitive = { path = "src/sort/add_primitive" }
clap = { version = "4", features = ["derive"], optional = true }
egraph-serialize = { version = "0.2.0", default-features = false }
env_logger = { version = "0.11", optional = true }
hashbrown = { version = "0.15" }
im-rc = "15.1.0"
indexmap = "2.0"
lazy_static = "1.4"
log = "0.4"
num = "0.4.3"
ordered-float = { version = "3.7" }
rustc-hash = "2.1"
thiserror = "2.0"
web-time = "1.1"
dyn-clone = "1.0.17"

# Backend
# TODO: move egglog-backend repo into core egglog repo
core-relations = { git = "https://github.com/egraphs-good/egglog-backend.git", rev = "1a1f913" }
egglog-bridge = { git = "https://github.com/egraphs-good/egglog-backend.git", rev = "1a1f913" }
numeric-id = { git = "https://github.com/egraphs-good/egglog-backend.git", rev = "1a1f913" }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["now"], optional = true }

[dev-dependencies]
codspeed-criterion-compat = "2.7.2"
glob = "0.3.1"
libtest-mimic = "0.8"
mimalloc = "0.1.46"
rayon = "1.10.0"

[profile.release]
incremental = true

# https://github.com/mstange/samply/?tab=readme-ov-file#turn-on-debug-info-for-full-stacks
[profile.profiling]
inherits = "release"
debug = true
