[package]
name = "core-relations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concurrency = {path = "../concurrency"}
hashbrown = "0.15"
indexmap = "2.0"
rustc-hash = "2.0"
fixedbitset = "0.5"
smallvec = "1.10"
bumpalo = "3.12"
thiserror = "2.0"
anyhow = "1.0"
lazy_static = { version = "1.4" }
numeric-id = {path = "../numeric-id"}
union-find = {path = "../union-find"}
log = "0.4"
petgraph = "0.6.5"
crossbeam-queue = "0.3.11"
dashmap = { version = "6.1.0", features = ["raw-api"] }
web-time = "1.1.0"
rayon = "1.10.0"
rand = "0.8.5"
dyn-clone = "1.0.17"
num = "0.4.3"
once_cell = "1.20.2"

[dev-dependencies]
divan = "0.1.15"
mimalloc = "0.1"

[[bench]]
name = "writes"
harness = false

[features]
default = []
debug-val-trace = []
