[package]
name = "egglog-ast"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
typetag = "0.2"
serde_json = "1.0"


[features]
default = []
