[package]
name = "egglog-ast"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = { workspace = true }
serde = { workspace = true }
typetag = { workspace = true }
serde_json = { workspace = true }


[features]
default = []
