[package]
name = "egglog-backend-trait"
version = { workspace = true }
edition = { workspace = true }
description = "Backend trait for egglog: unifies the in-memory and DuckDB backends behind a single dyn-compatible interface."
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
# The trait crate is the home for the basic id and config types used by
# Backend impls. It depends only on the neutral lower-level crates:
#   - core-relations: defines Value, BaseValueId, ExternalFunctionId,
#     ExecutionState, ExternalFunction, BaseValue, ContainerValue,
#     ContainerValueId — these are already backend-neutral.
#   - egglog-reports: defines IterationReport / ReportLevel.
#   - egglog-numeric-id: provides the define_id! macro and NumericId trait
#     used to define FunctionId / RuleId / VariableId newtypes.
egglog-core-relations = { workspace = true }
egglog-reports = { workspace = true }
egglog-numeric-id = { workspace = true }
anyhow = { workspace = true }
