[package]
name = "egglog-bridge-duckdb"
version.workspace = true
edition.workspace = true
description = "DuckDB-backed executor for egglog's resolved IR (Phase 1 of the DuckDB backend; see ../duckdb-backend-plan.md)"
license.workspace = true
publish = false

[dependencies]
duckdb = { version = "1.5", features = ["bundled", "vtab", "vscalar"] }
anyhow = "1"
egglog-backend-trait = { workspace = true }
egglog-core-relations = { workspace = true }
egglog-numeric-id = { workspace = true }
log = { workspace = true }

[[example]]
name = "transitive_closure"
path = "examples/transitive_closure.rs"

[[example]]
name = "function_outputs"
path = "examples/function_outputs.rs"

[[example]]
name = "path_egg"
path = "examples/path_egg.rs"

[[example]]
name = "arith"
path = "examples/arith.rs"
