[package]
name = "egglog-reports"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
hashbrown = { workspace = true, features = ["serde"] }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
web-time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
