[package]
name = "egglog-numeric-id"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
lazy_static = { workspace = true }
rayon = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
typetag = "0.2"
serde_json = "1.0"
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = {version = "0.4", features = ["serde"]}

[features]
default = []
