[package]
name = "egglog-numeric-id"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
rayon = { workspace = true }
serde = { workspace = true }
typetag = { workspace = true }
serde_json = { workspace = true }
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = {version = "0.4", features = ["serde"]}

[features]
default = []
