[package]
name = "union-find"
version = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
numeric-id = { workspace = true }
crossbeam = { workspace = true }
concurrency = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }

[[bench]]
name = "union-find"
harness = false