[package]
name = "web-demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.egg-smol]
path = ".."
features = ["wasm-bindgen"]

[dependencies]
wee_alloc = "0.4.5"

log = "0.4.6"
wasm-logger = "0.2"

console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3.56", features = [
    # "Blob",
    # "BlobPropertyBag",
    # "console",
    "MessageEvent",
    # "Url",

    # "Window",
    # "Location",
    # "Document",
    # "HtmlElement",
    # "Node",
    # "Text",
    "Worker",
    "DedicatedWorkerGlobalScope",
] }
