[package]
edition = "2021"
name = "web-demo"
version = "0.4.0"

[lib]
crate-type = ["cdylib"]

[dependencies.egglog]
default-features = false
features = ["serde", "graphviz", "wasm-bindgen"]
path = ".."

[dependencies]
wee_alloc = "0.4.5"

log = "0.4.19"
wasm-logger = "0.2"
serde_json = "1.0"
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.64", features = [
  # "Blob",
  # "BlobPropertyBag",
  # "console",
  "MessageEvent", # "Url",
  # "Window",
  # "Location",
  # "Document",
  # "HtmlElement",
  # "Node",
  # "Text",
  "Worker",
  "DedicatedWorkerGlobalScope",
] }
