[package]
name = "linear-algebra-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util = { version = "0.22.2", features = [
    "lexer",
] }
egglog = { git = "https://github.com/egraphs-good/egglog.git", rev = "c7cfe8b" }
regex = "1.11.1"

[build-dependencies]
lalrpop = "0.22.2"

[workspace]
