[package]
name = "egglog-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter-egglog = { git = "https://github.com/hatoo/tree-sitter-egglog.git" }
tree-sitter = "~0.20.10"
tree-sitter-traversal = "0.1.2"
tree-sitter-highlight = "0.20.1"
dashmap = "5.5.1"
anyhow = "1.0.75"
